--- a/src/scss/AppStyle.scss
+++ b/src/scss/AppStyle.scss
@@ -6,18 +6,16 @@ body {
 	width: 100%;
 	margin: 0;
 	padding: 0;
+	height: 100vh;
+	color: #1d1d1d;
+	background: #f5f5f5;
 }
 
-body,
-.dark,
-.white {
-	height: 100vh;
-}
 .dark {
 	color: #f5f5f5;
 	background: #1d1d1d;
 }
-.white,
+.light,
 .SearchBar form input {
 	color: #1d1d1d;
 	background: #f5f5f5;
@@ -25,10 +23,10 @@ body,
 
 .SearchBar {
 	display: flex;
-	justify-content: center;
+	//justify-content: center;
+	padding: 2em 0;
 	align-items: center;
 	flex-direction: column;
-	height: 80vh;
 
 	h1 {
 		font-size: 2.5em;
@@ -37,6 +35,11 @@ body,
 
 	form {
 		width: 60%;
+		label {
+			font-weight: 400;
+			font-size: 1.17em;
+			letter-spacing: 2px;
+		}
 		input {
 			width: 100%;
 			border: #1d1d1d solid 2px;
@@ -47,4 +50,16 @@ body,
 			margin: 10px 0;
 		}
 	}
+}
+
+.imageList {
+	width: 80%;
+	margin: 0 auto;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+	grid-gap: 0 10px;
+}
+.imageList img {
+	width: 100%;
+	border-radius: 3px;
 }
